plugins {
  id 'jacoco'
  id 'com.github.kt3k.coveralls' version '2.8.4'
  id 'com.github.spotbugs' version '6.0.26' apply false
}

allprojects {
  apply plugin: 'maven-publish'
  apply plugin: 'signing'
  apply plugin: 'jacoco'

  group = 'org.forgerock.cuppa'
  version = '1.7.0'

  repositories {
    mavenLocal()
    mavenCentral()
  }

  ext {
    coverageProjects = [':cuppa', ':cuppa-junit'].collect { project(it) }
  }
}

if (!project.hasProperty("sonatypeUsername") || !project.hasProperty("sonatypePassword")) {
  ext.sonatypeUsername = ""
  ext.sonatypePassword = ""
}

subprojects {
  apply plugin: 'java'
  apply plugin: 'checkstyle'
  apply plugin: 'com.github.spotbugs'

  java {
    sourceCompatibility = JavaVersion.VERSION_25
    targetCompatibility = JavaVersion.VERSION_25
  }

  configurations {
    provided
  }

  sourceSets {
    main {
      compileClasspath += configurations.provided
    }
    test {
      compileClasspath += configurations.provided
    }
  }

  javadoc {
    options.stylesheetFile = new File(rootDir, "docs/css/javadoc.css")
    classpath += configurations.provided
  }

  dependencies {
    testImplementation (group: 'org.testng', name: 'testng', version:'6.9.9') {
      exclude module: 'junit'
    }
    testImplementation group: 'org.assertj', name: 'assertj-core', version:'3.2.0'
    testImplementation group: 'org.mockito', name: 'mockito-all', version:'1.10.19'

    checkstyle 'com.puppycrawl.tools:checkstyle:6.15'
  }

  checkstyle {
    configFile = new File(rootDir, "config/checkstyle/checkstyle.xml")
    configProperties['samedir'] = new File(rootDir, "config/checkstyle")
    ignoreFailures = true
  }

  spotbugs {
    ignoreFailures = true
  }

  test {
    classpath += configurations.provided
    useTestNG()
    jvmArgs += [
      '--add-opens', 'java.base/java.lang=ALL-UNNAMED'
    ]
  }

  jacocoTestReport {
    reports {
      xml.required = true
      html.required = true
    }
  }

  task javadocJar(type: Jar, dependsOn: javadoc) {
    from javadoc.destinationDir
    archiveClassifier.set 'javadoc'
  }

  task sourcesJar(type: Jar) {
    from sourceSets.main.allSource
    archiveClassifier.set 'sources'
  }

  signing {
    required { gradle.taskGraph.hasTask("publish") }
    sign publishing.publications
  }

  publishing {
    publications {
      maven(MavenPublication) {
        from components.java
        artifact sourcesJar
        artifact javadocJar

        pom {
          name = 'Cuppa'
          description = 'Cuppa - A testing framework for Java 25'
          url = 'http://cuppa.forgerock.org'
          licenses {
            license {
              name = 'The Apache Software License, Version 2.0'
              url = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
              distribution = 'repo'
            }
          }
          developers {
            developer {
              id = 'phillcunnington'
              name = 'Phill Cunnington'
            }
            developer {
              id = 'joebandenburg'
              name = 'Joe Bandenburg'
            }
          }
          scm {
            url = 'https://github.com/cuppa-framework/cuppa'
            connection = 'scm:git@github.com:cuppa-framework/cuppa.git'
            developerConnection = 'scm:git@github.com:cuppa-framework/cuppa.git'
          }
        }
      }
    }
    repositories {
      maven {
        url = "https://oss.sonatype.org/service/local/staging/deploy/maven2"
        credentials {
          username = sonatypeUsername
          password = sonatypePassword
        }
      }
    }
  }
}

coveralls {
  sourceDirs = files(coverageProjects.sourceSets.main.allSource.srcDirs).files.absolutePath
}

task jacocoRootReport(type: JacocoReport) {
  dependsOn = coverageProjects.jacocoTestReport
  sourceDirectories.from = files(coverageProjects.sourceSets.main.allSource.srcDirs)
  classDirectories.from = files(coverageProjects.sourceSets.main.output)
  executionData.from = files(coverageProjects.jacocoTestReport.executionData)
  reports {
    xml {
      required = true
      outputLocation = file("${buildDir}/reports/jacoco/test/jacocoTestReport.xml")
    }
  }
}
